[project]
name = "obsv-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-exporter-prometheus>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "prometheus-client>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
